--- a/business-landingpage/src/components/footer/footer.css
+++ b/business-landingpage/src/components/footer/footer.css
@@ -23,10 +23,11 @@
   .footer-right a {
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     transition: color 0.3s;
+    margin: 0 10px;
   }
 
   .footer-right a:hover {
-    color: #ddd;
+    color: #bbb;
   }
