--- a/business-landingpage/src/components/footer/footer.css
+++ b/business-landingpage/src/components/footer/footer.css
@@ -1,20 +1,77 @@
 .footer {
-  background: #1a1a1a;
+  background: linear-gradient(to bottom, #121212, #1a1a1a);
+  border-top: 2px solid #b22222;
   color: white;
   text-align: center;
-  padding: 15px;
+  padding: 5px 20px;
   font-size: 14px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-height: 70px;
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
   }
+
+
+  /* Center */
+.footer-center {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-logo {
+  width: auto;
+  height: 90px;
+  max-width: 150px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.footer-logo:hover {
+  transform: scale(1.5);
+  color: #b22222;
+}
+
+
+/* Left Side */
+.footer-left {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-family: 'Poppins', sans-serif;
+  padding: 1px;
+}
 
   .footer-left a {
-    color: #bbb;
+    color: white;
     text-decoration: none;
-    margin: 0 10px;
+    margin: 0 4px;
+    transition: transform 0.3s ease-in-out;
   }
 
+  .footer-left a:hover {
+    color: #b22222;
+    transform: scale(1.05);
+  }
+
+  .footer-left p {
+    padding: 1px;
+  }
+
+  .footer-link {
+    color: #bbb;
+    text-decoration: none;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .footer-link:hover {
+    color: #b22222;
+    transform: scale(1.25);
+  }
+
+  
+  /* Right Side */
   .footer-right {
     display: flex;
     gap: 15px
@@ -26,8 +83,10 @@
     font-size: 20px;
     transition: color 0.3s;
     margin: 0 10px;
+    transition: transform 0.3s ease-in-out;
   }
 
   .footer-right a:hover {
-    color: #bbb;
+    color: #b22222;
+    transform: scale(1.25);
   }
