CSS styling alterations

--- a/business-landingpage/src/components/footer/footer.css
+++ b/business-landingpage/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background: linear-gradient(to bottom, #121212, #1a1a1a);
-  border-top: 2px solid #b22222;
+  border-top: 2px solid #f21d2f;
   color: white;
   text-align: center;
   padding: 5px 20px;
@@ -30,7 +30,7 @@
 
 .footer-logo:hover {
   transform: scale(1.5);
-  color: #b22222;
+  color: #f21d2f;
 }
 
 
@@ -41,6 +41,7 @@
   font-size: 14px;
   font-family: 'Poppins', sans-serif;
   padding: 1px;
+  text-decoration: none;
 }
 
   .footer-left a {
@@ -51,8 +52,9 @@
   }
 
   .footer-left a:hover {
-    color: #b22222;
+    color: #f21d2f;
     transform: scale(1.05);
+    text-decoration: none;
   }
 
   .footer-left p {
@@ -60,14 +62,15 @@
   }
 
   .footer-link {
-    color: #bbb;
+    color: white;
     text-decoration: none;
     transition: transform 0.3s ease-in-out;
   }
 
   .footer-link:hover {
-    color: #b22222;
-    transform: scale(1.25);
+    color: #f21d2f;
+    transform: scale(1.05);
+    text-decoration: none;
   }
 
   
@@ -87,6 +90,6 @@
   }
 
   .footer-right a:hover {
-    color: #b22222;
+    color: #f21d2f;
     transform: scale(1.25);
   }
