--- a/business-landingpage/src/components/hero/Hero.css
+++ b/business-landingpage/src/components/hero/Hero.css
@@ -37,7 +37,7 @@
 }
 
 .hero-overlay h1 {
-    font-size: 1rem;
+    font-size: 19px;
     font-weight: 500;
     font-family: 'Poppins', sans-serif;
 }
