Gallery rework progression

--- a/business-landingpage/src/components/footer/footer.css
+++ b/business-landingpage/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background: linear-gradient(to bottom, #121212, #1a1a1a);
-  border-top: 2px solid #f21d2f;
+  border-top: 3px solid black;
   color: white;
   text-align: center;
   padding: 5px 20px;
