--- a/business-landingpage/src/pages/services/services.css
+++ b/business-landingpage/src/pages/services/services.css
@@ -1,19 +1,11 @@
 /* General Page Styling */
 .about-services-container {
-  max-width: 1300px;
+  max-width: 100vw;
   margin: auto;
   padding: 100px 20px;
   color: white;
-}
-
-/* Background Image with Dark Overlay */
-.services-bg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: url(../../assets/snow_night.JPG) no-repeat center center/cover;
-  filter: brightness(0.3);
-  z-index: -1;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  url('../../assets/snow_night.JPG') no-repeat center center/cover;
 }
 
 /* About Us Section */
@@ -22,7 +14,7 @@
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  background: rgba(0, 0, 0, 0.7);
+  background: transparent;
   padding: 40px;
   border-radius: 10px;
 }
@@ -37,7 +29,7 @@
   font-size: 32px;
   font-weight: 700;
   margin-bottom: 15px;
-  border-left: 5px solid #f4b400;
+  border-left: 5px solid #f21d2f;
   padding-left: 10px;
 }
 
@@ -68,7 +60,7 @@
   font-weight: 700;
   margin-bottom: 20px;
   text-align: center;
-  border-bottom: 2px solid #f4b400;
+  border-bottom: 2px solid #f21d2f;
   display: inline-block;
   padding-bottom: 5px;
 }
@@ -121,7 +113,7 @@
   margin-top: 15px;
   font-size: 22px;
   font-weight: 700;
-  color: #f4b400;
+  color: #f21d2f;
 }
 
 /* Scroll Buttons */
@@ -184,7 +176,7 @@
   font-weight: 700;
   margin-bottom: 20px;
   text-align: center;
-  border-bottom: 2px solid #f4b400;
+  border-bottom: 2px solid #f21d2f;
   display: inline-block;
   padding-bottom: 5px;
 }
