--- a/business-landingpage/src/pages/services/services.css
+++ b/business-landingpage/src/pages/services/services.css
@@ -76,6 +76,10 @@
   justify-content: center;
   overflow: hidden;
   width: 100%;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  overflow-x: auto;
+  padding: 20px;
 }
 
 /* Infinite Scroll Animation */
@@ -95,8 +99,8 @@
   scroll-behavior: smooth;
   scrollbar-width: none; /* Hide scrollbar */
   white-space: nowrap;
-  animation: infiniteScroll 15s linear infinite;
-
+  animation: infiniteScroll 60s linear infinite;
+  padding: 20px;
   /**padding: 20px;
   overflow-x: auto;**/
 }
@@ -116,7 +120,8 @@
   padding: 20px;
   border-radius: 10px;
   text-align: center;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  margin-right: 20px; /* Adds image space */
 }
 
 .service-card:hover {
@@ -188,7 +193,7 @@
   scrollbar-width: none;
   padding: 20px;
   white-space: nowrap;
-  animation: infinteScroll 15s linear infinite;
+  animation: infinteScroll 60s linear infinite;
 }
 
 .gallery-carousel:hover {
@@ -204,6 +209,8 @@
   flex: 0 0 300px;
   border-radius: 10px;
   overflow: hidden;
+  margin-right: 20px;
+  transition: transform 0.5s ease-in-out;
 }
 
 .gallery-card img {
