--- a/business-landingpage/src/pages/services/services.css
+++ b/business-landingpage/src/pages/services/services.css
@@ -4,8 +4,9 @@
   margin: auto;
   padding: 100px 20px;
   color: white;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-  url('../../assets/snow_night.JPG') no-repeat center center/cover;
+  background: linear-gradient(rgba(0, 0, 0, .92), rgba(0, 0, 0, .92)),
+  url('../../assets/alternate-back2.webp') no-repeat center center/cover;
+  /* url('../../assets/snow_night.JPG') no-repeat center center/cover; */
   overflow-x: hidden; /* Prevents unwanted horizontal scroll */
 }
 
@@ -116,7 +117,7 @@
 /* Service Cards */
 .service-card {
   flex: 0 0 300px;
-  background: rgba(0, 0, 0, 0.8);
+  /*background: rgba(0, 0, 0, 0.8);*/
   padding: 20px;
   border-radius: 10px;
   text-align: center;
@@ -131,13 +132,14 @@
 .service-card img {
   width: 100%;
   border-radius: 8px;
+  height: 50vh;
 }
 
 .service-card h3 {
   margin-top: 15px;
   font-size: 22px;
   font-weight: 700;
-  color: #f21d2f;
+  color: white;
 }
 
 /* Scroll Buttons */
@@ -152,7 +154,7 @@
   gap: 20px;
   margin-top: 60px;
   padding: 40px;
-  background: rgba(0, 0, 0, 0.7);
+  /*background: rgba(0, 0, 0, 0.7);*/
   border-radius: 10px;
 }
 
