--- a/business-landingpage/src/pages/gallery/gallery.css
+++ b/business-landingpage/src/pages/gallery/gallery.css
@@ -16,8 +16,8 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: url("../../assets/alternate-back2.webp") no-repeat center center/cover;
-  filter: brightness(0.2);
+  background: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .92)),
+  url('../../assets/alternate-back2.webp') no-repeat center center/cover;
   z-index: 0;
 }
 
