--- a/business-landingpage/src/components/footer/footer.css
+++ b/business-landingpage/src/components/footer/footer.css
@@ -93,3 +93,40 @@
     color: #f21d2f;
     transform: scale(1.25);
   }
+
+
+
+
+
+
+
+
+
+  @media (max-width: 480px) {
+    .footer {
+      flex-direction: column;
+      align-items: center;
+      padding: 10px;
+      text-align: center;
+    }
+  
+    .footer-left,
+    .footer-center,
+    .footer-right {
+      flex: unset;
+      width: 100%;
+      justify-content: center;
+      margin-top: 5px;
+      flex-wrap: wrap;
+    }
+  
+    .footer-logo {
+      max-width: 100px;
+      height: auto;
+    }
+  
+    .footer-right a {
+      margin: 0 5px;
+      font-size: 18px;
+    }
+  }  
