--- a/business-landingpage/src/components/navbar/navbar.css
+++ b/business-landingpage/src/components/navbar/navbar.css
@@ -20,7 +20,13 @@
   left: 0;
   width: 100%;
   height: 300px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 0) 60%);
+  background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.65) 0%,
+      rgba(0, 0, 0, 0.4) 40%,
+      rgba(0, 0, 0, 0) 60%
+    );
+  /*background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 0) 60%);*/
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   pointer-events: none;
