--- a/business-landingpage/src/components/footer/footer.css
+++ b/business-landingpage/src/components/footer/footer.css
@@ -15,10 +15,11 @@
 
   /* Center */
 .footer-center {
-  flex: 2;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: center;
 }
 
 .footer-logo {
@@ -38,40 +39,25 @@
 .footer-left {
   display: flex;
   align-items: center;
-  font-size: 14px;
-  font-family: 'Poppins', sans-serif;
-  padding: 1px;
-  text-decoration: none;
+  gap: 5px;
+  flex-wrap: wrap;
 }
 
-  .footer-left a {
-    color: white;
-    text-decoration: none;
-    margin: 0 4px;
-    transition: transform 0.3s ease-in-out;
-  }
+.footer-left svg {
+  color: #ccc;
+}
 
-  .footer-left a:hover {
-    color: #f21d2f;
-    transform: scale(1.05);
-    text-decoration: none;
-  }
+.payment-icon1 {
+  height: 25px;
+  margin-left: 0px;
+  opacity: .85;
+}
 
-  .footer-left p {
-    padding: 1px;
-  }
-
-  .footer-link {
-    color: white;
-    text-decoration: none;
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .footer-link:hover {
-    color: #f21d2f;
-    transform: scale(1.05);
-    text-decoration: none;
-  }
+.payment-icon2 {
+  height: 25px;
+  margin-left: 0px;
+  opacity: .85;
+}
 
   
   /* Right Side */
@@ -94,6 +80,33 @@
     transform: scale(1.25);
   }
 
+  /* Mini Footer (Payment methods and Site Credit) */
+.mini-footer {
+  background: #0a0a0a;
+  text-align: center;
+  padding: 1px 0;
+  font-size: 12px;
+  color: #ccc;
+}
+
+.mini-footer a {
+  color: #ccc;
+  text-decoration: none;
+}
+
+.mini-footer a:hover {
+  color: #f21d2f;
+  text-decoration: underline;
+}
+
+/* Responsive Adjustment */
+@media (max-width: 600px) {
+  .mini-footer {
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+  }
+}
 
 
 
@@ -162,4 +175,3 @@
       height: auto;
     }
   }
-  
