Media Queries for footer and contact

--- a/business-landingpage/src/components/footer/footer.css
+++ b/business-landingpage/src/components/footer/footer.css
@@ -177,6 +177,7 @@
     .footer-logo {
       max-width: 100px;
       height: auto;
+      margin-right: 30px;
     }
   
     .footer-right a {
@@ -214,5 +215,7 @@
     .footer-logo {
       max-width: 100px;
       height: auto;
+      margin-right: 40px;
     }
   }
+  
